# canopy

./: README.md  pyproject.toml
canopy/: __init__.py  main.py
canopy/core/: __init__.py  claude_runner.py  git_service.py  session_manager.py  utils.py
canopy/models/: __init__.py  config.py  repository.py  session.py
canopy/resources/: __init__.py  styles.qss
canopy/ui/: __init__.py  chat_view.py  checkpoint_panel.py  command_log.py  diff_viewer.py  file_reference.py  main_window.py  message_input.py  session_panel.py  session_tabs.py  worktree_panel.py
canopy/ui/dialogs/: __init__.py  add_repo_dialog.py  create_worktree_dialog.py  delete_worktree_dialog.py  permission_dialog.py
tests/: conftest.py  test_claude_runner.py  test_git_service.py  test_stream_event.py  test_ui_widgets.py
